--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
     <artifactId>derbyclient</artifactId>
     <version>10.13.1.1</version>
 </dependency>
-
+        <dependency>
+            <groupId>org.jdesktop</groupId>
+            <artifactId>beansbinding</artifactId>
+            <version>1.2.1</version>
+        </dependency>
     </dependencies>
 </project>
